Bug 860441 - Camera preview update is not smooth on gonk - r=nsilva